--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "canvas": "^2.11.2",
-    "chart.js": "^4.4.5"
+    "chart.js": "^4.4.5",
+    "chartjs-plugin-annotation": "^3.1.0"
   }
 }
